<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_p"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnjogar"
        android:layout_width="311dp"
        android:layout_height="227dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Jogar"
        app:iconTint="#5E2121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <Button
        android:id="@+id/btnhistoria"
        android:layout_width="120dp"
        android:layout_height="68dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="101dp"
        android:text="@string/historia"
        app:layout_constraintBottom_toTopOf="@+id/btnjogar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnreceita" />

    <Button
        android:id="@+id/btnreceita"
        android:layout_width="123dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="4dp"
        android:text="@string/receitas"
        app:layout_constraintBottom_toTopOf="@+id/btnhistoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncredito" />

    <Button
        android:id="@+id/btncredito"
        android:layout_width="121dp"
        android:layout_height="72dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="16dp"
        android:text="@string/creditos"
        app:layout_constraintBottom_toTopOf="@+id/btnreceita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>